- Resoved new order, invoice issue. - REsolved navbar not showing logout menu issue. - Added show link to purches order page - Bootstraped purches order show page with purches order items.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -220,3 +220,12 @@ display: none;
 .overlay .loader{
   margin: 20% 35%;
 }
+
+tbody.purchase-order-items > tr > td{
+  vertical-align: bottom;
+}
+.text.optional {
+  height: 37px;
+}
+
+
